Add sample lessons with interactive coach sessions and voice service
- Created SampleLessons component with full lesson content for each coach
- Implemented voice service with OpenAI TTS fallback (when Hume unavailable)
- Added InteractiveCoachSession for real-time coach conversations
- Supports text input and speech recognition
- OpenAI GPT-4 powers coach responses in their unique teaching styles
- Added route /sample-lessons to navigation

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,14 @@ REACT_APP_HUME_API_KEY=your_hume_api_key_here
 # Or use the default config ID below
 REACT_APP_HUME_CONFIG_ID=405fe2ff-0cf5-4ff9-abf9-fc09f4625ed8
 
+# OpenAI Configuration (for fallback voice and conversation)
+# Get your API key from: https://platform.openai.com/api-keys
+REACT_APP_OPENAI_API_KEY=your_openai_api_key_here
+
+# ElevenLabs Configuration (alternative voice provider)
+# Get your API key from: https://elevenlabs.io/api
+REACT_APP_ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
+
 # Krikey Animation Service Configuration
 # ========================================
 
