feat: Refine eyebrow positioning and expression mapping

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ REACT_APP_RPM_APP_ID=68389f8fa2bcefc234512570
 # Hume AI Configuration
 # Get your API key from: https://platform.hume.ai/settings/keys
 REACT_APP_HUME_API_KEY=your_hume_api_key_here
+REACT_APP_HUME_SECRET_KEY=your_hume_secret_key_here
 
 # Get your config ID from: https://platform.hume.ai/voice
 # Or use the default config ID below
