Major update: Audio playback fix, face animation integration, and Posie coach profile
- Fixed critical audio playback issues with Web Audio API integration
- Implemented real-time lip sync and facial animations for coach avatar
- Added random selection of multiple talking animations for variety
- Enhanced websocket cleanup to prevent orphaned connections
- Created comprehensive Posie coach profile and configuration
- Updated Posie's Hume EVI config ID: b939d339-15bc-44ab-84d8-b614a539724f
- Improved animation parameters for more natural movements
- Added visibility change handler for better connection management

--- a/.env.example
+++ b/.env.example
@@ -20,6 +20,10 @@ REACT_APP_OPENAI_API_KEY=your_openai_api_key_here
 # Get your API key from: https://elevenlabs.io/api
 REACT_APP_ELEVENLABS_API_KEY=your_elevenlabs_api_key_here
 
+# Convai Configuration (AI voice and conversation service)
+# Get your API key from: https://convai.com/dashboard
+REACT_APP_CONVAI_API_KEY=your_convai_api_key_here
+
 # Krikey Animation Service Configuration
 # ========================================
 
