--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,18 @@ REACT_APP_RPM_API_KEY=your_api_key_here
 REACT_APP_RPM_SUBDOMAIN=xr-cupid
 REACT_APP_RPM_APP_ID=68389f8fa2bcefc234512570
 
+# Firebase Configuration
+# Get these values from: https://console.firebase.google.com/
+# Go to Project Settings > General > Your apps > Firebase SDK snippet > Config
+REACT_APP_FIREBASE_API_KEY=your_firebase_api_key_here
+REACT_APP_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL=https://your-project-default-rtdb.firebaseio.com/
+REACT_APP_FIREBASE_PROJECT_ID=your-project-id
+REACT_APP_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=123456789012
+REACT_APP_FIREBASE_APP_ID=1:123456789012:web:abcdef123456789
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-ABCDEFGHIJ
+
 # Hume AI Configuration
 # Get your API key from: https://platform.hume.ai/settings/keys
 REACT_APP_HUME_API_KEY=your_hume_api_key_here
