MEGA COMMIT: All conference demo work - new homepage, avatars, navigation, UI improvements, conference components, angel mascot, cursor system, venue images, documentation, and all supporting files

--- a/.env.example
+++ b/.env.example
@@ -19,10 +19,13 @@ REACT_APP_FIREBASE_MEASUREMENT_ID=G-ABCDEFGHIJ
 # Get your API key from: https://platform.hume.ai/settings/keys
 REACT_APP_HUME_API_KEY=your_hume_api_key_here
 REACT_APP_HUME_SECRET_KEY=your_hume_secret_key_here
-
-# Get your config ID from: https://platform.hume.ai/voice
-# Or use the default config ID below
 REACT_APP_HUME_CONFIG_ID=405fe2ff-0cf5-4ff9-abf9-fc09f4625ed8
+
+# Coach-specific Hume Config IDs (optional)
+# If not set, will use the default config ID above
+REACT_APP_HUME_CONFIG_ID_GRACE=your_grace_config_id_here
+REACT_APP_HUME_CONFIG_ID_POSIE=your_posie_config_id_here
+REACT_APP_HUME_CONFIG_ID_RIZZO=your_rizzo_config_id_here
 
 # OpenAI Configuration (for fallback voice and conversation)
 # Get your API key from: https://platform.openai.com/api-keys
