Add Dougie NPC Hume config ID

--- a/.env.production
+++ b/.env.production
@@ -25,6 +25,7 @@ REACT_APP_HUME_CONFIG_ID=bfd6db39-f0ea-46c3-a64b-e902d8cec212
 REACT_APP_HUME_CONFIG_ID_GRACE=bfd6db39-f0ea-46c3-a64b-e902d8cec212
 REACT_APP_HUME_CONFIG_ID_POSIE=dbf8debd-6835-489f-a7c3-a38fde6bb859
 REACT_APP_HUME_CONFIG_ID_RIZZO=0643bb10-61b5-43a8-ae1d-eb0051afc0a8
+REACT_APP_HUME_CONFIG_ID_DOUGIE=320d816a-8dac-44e6-b59b-1c3d2b6b24d9
 
 # OpenAI Configuration (for fallback voice and conversation)
 # TODO: Add your OpenAI API key if you have one
