--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
           cache: 'npm'
           
       - name: Install dependencies
-        run: npm ci
+        run: npm install --legacy-peer-deps
         
       - name: Build with production env
         run: |
@@ -42,12 +42,16 @@ jobs:
           # List files to ensure everything is present
           echo "Files in src/services:"
           ls -la src/services/
+          # Check if node_modules exists
+          echo "Checking node_modules:"
+          ls -la node_modules/ | head -20
           # Build
           echo "Starting build..."
-          npm run build
+          npm run build || (echo "Build failed. Showing error details:" && cat npm-debug.log 2>/dev/null && exit 1)
         env:
           CI: false
           NODE_OPTIONS: --max-old-space-size=4096
+          GENERATE_SOURCEMAP: false
           
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
