--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "aws-amplify": "^6.15.0",
     "axios": "^1.7.7",
     "bull": "^4.12.0",
+    "chart.js": "^4.4.9",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "firebase": "^9.22.2",
@@ -47,6 +48,7 @@
     "puppeteer": "^21.0.0",
     "qrcode": "^1.5.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^6.0.0",
     "react-hot-toast": "^2.5.2",
