--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/d3": "^7.4.3",
     "@types/firebase": "^3.2.1",
     "@types/p5": "^1.7.6",
     "@types/qrcode": "^1.5.5",
@@ -30,6 +31,7 @@
     "axios": "^1.7.7",
     "bull": "^4.12.0",
     "chart.js": "^4.5.0",
+    "d3": "^7.9.0",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "firebase": "^9.22.2",
