--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,6 +40,7 @@ jobs:
           CI: false
           NODE_OPTIONS: --max-old-space-size=4096
           GENERATE_SOURCEMAP: false
+          TSC_COMPILE_ON_ERROR: true
           
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
