--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-error-boundary": "^6.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.16",
     "react-router-dom": "^7.5.3",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.2",
